add: post tags docs: add docs for search post by tag change: no need fancy drop statement in post table migration
