# docs/swagger.yaml
@@ -1002,6 +1002,55 @@ paths:
       summary: Unlike a post
       tags:
       - Posts
+  /posts/tag/{tag}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all posts with optional pagination and tag
+      parameters:
+      - default: 20
+        description: Limit
+        in: query
+        name: limit
+        type: integer
+      - default: 0
+        description: Offset
+        in: query
+        name: offset
+        type: integer
+      - description: Tag query
+        in: path
+        name: tag
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              allOf:
+              - $ref: '#/definitions/github_com_fatihesergg_go_social_internal_util.SuccessResultResponse'
+              - properties:
+                  result:
+                    items:
+                      $ref: '#/definitions/github_com_fatihesergg_go_social_internal_dto.AllPostResponse'
+                    type: array
+                type: object
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_fatihesergg_go_social_internal_util.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_fatihesergg_go_social_internal_util.ErrorResponse'
+      security:
+      - Bearer: []
+      summary: Get all posts by tag
+      tags:
+      - Posts
   /replies/{id}:
     delete:
       consumes:
